--- a/modules/app/src/main/res/layouts/activities/loginActivity/layout/login_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/loginActivity/layout/login_activity_layout.xml
@@ -106,6 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:onClick="tapForgotPasswordButton"
         android:text="@string/forgot_password"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
