--- a/modules/app/src/main/res/layouts/activities/professorActivity/layout/professor_activity_main_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/professorActivity/layout/professor_activity_main_layout.xml
@@ -52,6 +52,22 @@
         <variable
             name="editingProfile"
             type="Boolean" />
+
+        <variable
+            name="nextScheduleClass"
+            type="com.lonn.studentassistant.firebaselayer.viewModels.abstractions.ScheduleClassViewModel" />
+
+        <variable
+            name="nextExam"
+            type="com.lonn.studentassistant.firebaselayer.viewModels.abstractions.ScheduleClassViewModel" />
+
+        <variable
+            name="timeToNextClass"
+            type="Long" />
+
+        <variable
+            name="timeToNextExam"
+            type="Long" />
     </data>
 
     <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -89,6 +105,8 @@
                 layout="@layout/professor_activity_content_layout"
                 app:courses="@{courses.values()}"
                 app:editingProfile="@{editingProfile}"
+                app:nextExam="@{nextExam}"
+                app:nextScheduleClass="@{nextScheduleClass}"
                 app:oneTimeClasses="@{oneTimeClasses.values()}"
                 app:otherActivities="@{otherActivities.values()}"
                 app:personalCourses="@{personalCourses.values()}"
@@ -97,7 +115,9 @@
                 app:professor="@{professor}"
                 app:professors="@{professors.values()}"
                 app:profileImageContent="@{profileImageContent}"
-                app:recurringClasses="@{recurringClasses.values()}" />
+                app:recurringClasses="@{recurringClasses.values()}"
+                app:timeToNextClass="@{timeToNextClass}"
+                app:timeToNextExam="@{timeToNextExam}" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
