--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_main_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_main_layout.xml
@@ -14,6 +14,10 @@
             type="com.lonn.studentassistant.firebaselayer.viewModels.StudentViewModel" />
 
         <variable
+            name="grades"
+            type="java.util.Map&lt;String, com.lonn.studentassistant.firebaselayer.viewModels.GradeViewModel&gt;" />
+
+        <variable
             name="courses"
             type="java.util.Map&lt;String, com.lonn.studentassistant.firebaselayer.viewModels.CourseViewModel&gt;" />
 
@@ -48,6 +52,22 @@
         <variable
             name="editingProfile"
             type="Boolean" />
+
+        <variable
+            name="nextScheduleClass"
+            type="com.lonn.studentassistant.firebaselayer.viewModels.abstractions.ScheduleClassViewModel" />
+
+        <variable
+            name="nextExam"
+            type="com.lonn.studentassistant.firebaselayer.viewModels.abstractions.ScheduleClassViewModel" />
+
+        <variable
+            name="timeToNextClass"
+            type="Long" />
+
+        <variable
+            name="timeToNextExam"
+            type="Long" />
     </data>
 
     <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -85,6 +105,9 @@
                 layout="@layout/student_activity_content_layout"
                 app:courses="@{courses.values()}"
                 app:editingProfile="@{editingProfile}"
+                app:grades="@{grades.values()}"
+                app:nextExam="@{nextExam}"
+                app:nextScheduleClass="@{nextScheduleClass}"
                 app:oneTimeClasses="@{oneTimeClasses.values()}"
                 app:otherActivities="@{otherActivities.values()}"
                 app:personalActivities="@{personalActivities.values()}"
@@ -92,7 +115,9 @@
                 app:professors="@{professors.values()}"
                 app:profileImageContent="@{profileImageContent}"
                 app:recurringClasses="@{recurringClasses.values()}"
-                app:student="@{student}" />
+                app:student="@{student}"
+                app:timeToNextClass="@{timeToNextClass}"
+                app:timeToNextExam="@{timeToNextExam}" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
