--- a/modules/app/src/main/res/layouts/fragments/layout/one_time_class_table_row.xml
+++ b/modules/app/src/main/res/layouts/fragments/layout/one_time_class_table_row.xml
@@ -80,7 +80,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.5"
                 android:gravity="center"
-                android:lines="@{oneTimeClass.typeNumberOfLines}"
+                android:singleLine="true"
                 android:padding="2dp"
                 android:text="@{oneTimeClass.formattedType}"
                 app:autoSizeMaxTextSize="14sp"
@@ -98,7 +98,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.50"
                 android:gravity="center"
-                android:lines="@{oneTimeClass.numberOfRooms}"
+                android:maxLines="2"
                 android:padding="2dp"
                 android:text="@{oneTimeClass.rooms}"
                 app:autoSizeMaxTextSize="12sp"
